--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                             </div>
 
                             <div class="timeline-header">
-                                <h3>Scientific baccalaureate</h3>
-                                <p>October 2019 - Present</p>
+                                <h3> High school curriculum scientific baccalaureate option</h3>
+                                <p>October 2013 - 2020</p>
                             </div>
 
                             <div class="timeline-content">
